feat(feeds): add /feeds/{feed}/details, progressive /feeds/complete, mini-admin buttons, sync uses details_max

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "mercadodasophia-bbd01"
-  }
+  },
+  "targets": {
+    "mercadodasophia-bbd01": {
+      "hosting": {
+        "admin": [
+          "admin-mercadodasophia"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
