feat: integra dados reais do Firebase na tela de pedidos - remove dados fictícios e busca pedidos reais do usuário logado

--- a/firebase.json
+++ b/firebase.json
@@ -8,8 +8,23 @@
   },
   "hosting": [
     {
+      "target": "loja",
+      "public": "build/web_loja",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
       "target": "admin",
-      "public": "build/web",
+      "public": "build/web_admin",
       "ignore": [
         "firebase.json",
         "**/.*",
