--- a/.firebaserc
+++ b/.firebaserc
@@ -7,6 +7,9 @@
       "hosting": {
         "admin": [
           "admin-mercadodasophia"
+        ],
+        "loja": [
+          "mercadodasophia-bbd01"
         ]
       }
     }
